# agentic_cxg_query

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  README.md  SKILL_OVERVIEW.md  example_query.py  pyproject.toml  setup.ps1  setup.sh
.claude/agents/: ontology-term-lookup.md
.claude/skills/cxg-query/: SKILL.md
.claude/skills/cxg-query/references/: grammar.md  templates.md
.codex/: config.toml
.codex/agents/: ontology-term-lookup.md
.github/: copilot-instructions.md
.github/workflows/: windows-setup-manual.yml
data/: obsolete_hsapdv.tsv  obsolete_mmusdv.tsv  refresh_obsolete_stages.sh
examples/: 01_t_cells_in_lung.md  02_gene_expression_in_fibroblasts.md  03_disease_and_development_stage.md  04_snrnaseq_pediatric_kidney_hvg.md
planning/: ROADMAP.md  copilot-mcp-server.md
src/: gene_resolver.py  refresh_census_fields.py
tests/: test_gene_resolver.py
