[project]
name = "agentic-cxg-query"
version = "0.1.0"
description = "Agentic wrapper for CELLxGENE census query generation with ontology-aware term expansion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "cxg-query-enhancer>=0.2.3",
    "cellxgene-census>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["gene_resolver"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
